--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@material-tailwind/html": "^2.3.2"
     }
 }
