--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@material-tailwind/html": "^2.3.2"
+        "@alpinejs/focus": "^3.14.3",
+        "@material-tailwind/html": "^2.3.2",
+        "alpinejs": "^3.14.3"
     }
 }
